Add Filter dialog to view menu

--- a/src/main/resources/localStrings.properties
+++ b/src/main/resources/localStrings.properties
@@ -175,6 +175,8 @@ fileopen_dialog_read_file_failed = Failed to read file.
 
 fileopen_dialog_title = Choose GC log file
 
+filter_dialog_title = Filter
+
 main_frame_menu_file = File
 
 main_frame_menu_help = Help
@@ -269,6 +271,8 @@ main_frame_menuitem_hint_used_young_memory = Part of the young heap that is actu
 
 main_frame_menuitem_hint_watch = Watches and reloads the current file, if it changes
 
+main_frame_menuitem_hint_filter = Filters dataset by start and end time
+
 main_frame_menuitem_hint_young_memory = Part of the heap that constitutes the young generation
 
 main_frame_menuitem_inc_gc_lines = Inc GC Lines
@@ -358,6 +362,8 @@ main_frame_menuitem_used_tenured_memory = Used Tenured Heap
 main_frame_menuitem_used_young_memory = Used young Heap
 
 main_frame_menuitem_watch = Watch
+
+main_frame_menuitem_filter = Filter...
 
 main_frame_menuitem_young_memory = Young Generation
 
