--- a/src/main/resources/localStrings.properties
+++ b/src/main/resources/localStrings.properties
@@ -374,3 +374,7 @@ urlopen_dialog_add_checkbox = Add URL to current window.
 urlopen_dialog_hint_add_checkbox = <html>When checked, the new document will be added to<br>the current window, instead of opened in a new window.</html>
 
 urlopen_dialog_title = Open GC URL
+
+data_panel_slopeafterconcgc = Slope after conc GC
+
+data_panel_maxslopeafterconcgc = Max slope after conc GC
